examples/smlfmt-1.2.0/test/fail/bad-where-type-2.sml
signature X =
  Y where type 'a Foo.'t = 'a list
